--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ nano /workspaces/MijnEersteRepository/.gitignore
 build/
 qt-everywhere-opensource-src-6.5.4.tar.xz
 qt-everywhere-src-6.5.4/
+git add .gitignore
+git commit -m "Update .gitignore to exclude build directory and Qt source files"
